<resources>
    <string name="app_name">LabsCM20211-Gr01</string>
    <string name="name_input">Name</string>
    <string name="last_name_input">Last Name</string>
    <string name="gender_input_label">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="birth_date_input_label">Birth date</string>
    <string name="birth_date_input_button">Change</string>
    <string name="education_level_input">Education level</string>
    <string-array name="education_level_array">
        <item>Education Level</item>
        <item>Elementary</item>
        <item>Secondary</item>
        <item>University</item>
        <item>Other</item>
    </string-array>
    <string name="next_button">Next</string>
    <string name="info_contacto">Información de Contácto</string>
    <string name="required">Requerido*</string>
    <string name="mail">Correo</string>
    <string name="pais">Pais</string>
    <string name="ciudad">Ciudad</string>
    <string name="direccion">Dirección</string>
    <string name="next">Siguiente</string>
    <string name="telefono">Teléfono</string>
    <string name="datos">Datos obtenidos</string>
    <array name="countries">
        <item>Argentina</item>
        <item>Bolivia</item>
        <item>Brasil</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>Ecuador</item>
        <item>El Salvador</item>
        <item>Guatemala</item>
        <item>Haití</item>
        <item>Honduras</item>
        <item>México</item>
        <item>Nicaragua</item>
        <item>Panamá</item>
        <item>Paraguay</item>
        <item>Perú</item>
        <item>Republica Dominicana</item>
        <item>Uruguay</item>
        <item>Venezuela</item>
    </array>
    <array name="cities">
        <item>Bogotá</item>
        <item>Medellín</item>
        <item>Cali</item>
        <item>Barranquilla</item>
        <item>Bucaramanga</item>
        <item>Cartagena</item>
        <item>Manizales</item>
        <item>Pereira</item>
        <item>Ibagué</item>
        <item>Montería</item>
        <item>Armenia</item>
        <item>Pasto</item>
    </array>
</resources>