<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalDataActivity">

    <EditText
        android:id="@+id/name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:hint="@string/name_input"
        android:inputType="textCapWords|textPersonName|textNoSuggestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:drawableLeft="@drawable/ic_baseline_person_add_alt_1_24"
        android:hint="@string/last_name_input"
        android:inputType="textCapWords|textPersonName|textNoSuggestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/gender_input_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_baseline_group_24"
        android:text="@string/gender_input_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_input" />

    <RadioGroup
        android:id="@+id/gender_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gender_input_label"
        app:layout_constraintTop_toBottomOf="@+id/last_name_input">

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onGenderInputRadioButtonClicked"
            android:text="@string/gender_male" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onGenderInputRadioButtonClicked"
            android:text="@string/gender_female" />/>
    </RadioGroup>

    <TextView
        android:id="@+id/birth_date_input_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
        android:text="@string/birth_date_input_label"
        app:layout_constraintBottom_toTopOf="@+id/education_level_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_radio_group"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/birth_date_input_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:onClick="onDateInputButtonClick"
        android:text="@string/birth_date_input_button"
        app:layout_constraintStart_toEndOf="@+id/birth_date_input_label"
        app:layout_constraintTop_toBottomOf="@+id/gender_radio_group" />

    <Spinner
        android:id="@+id/education_level_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="33dp"
        android:drawableLeft="@drawable/ic_baseline_school_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birth_date_input_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/to_contact_data_activity_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:onClick="nextButtonClickHandler"
        android:text="@string/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>